--- a/templates/home.html
+++ b/templates/home.html
@@ -45,40 +45,40 @@
         <br/>
 
         <div dx-sample tags="angularjs; angular-routing" ng-show="tab == 'basic'">
-            <div dx-sample-file src="samples/basic/demo.js"></div>
-            <div dx-sample-file src="samples/basic/about.module.js"></div>
-            <div dx-sample-file src="samples/basic/contact.module.js"></div>
-            <div dx-sample-file src="samples/basic/home.module.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/demo.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/about.module.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/contact.module.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/home.module.js"></div>
 
-            <div dx-sample-file src="samples/basic/index.html"></div>
-            <div dx-sample-file src="samples/basic/home.html"></div>
-            <div dx-sample-file src="samples/basic/contact.html"></div>
-            <div dx-sample-file src="samples/basic/about.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/index.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/home.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/contact.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/about.html"></div>
 
-            <div dx-sample-file src="samples/basic/style.css"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/style.css"></div>
         </div>
 
         <div dx-sample tags="angularjs; angular-routing" ng-show="tab == 'sub'">
-            <div dx-sample-file src="samples/basic/demo.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/demo.js"></div>
 
-            <div dx-sample-file src="samples/basic/index.html"></div>
-            <div dx-sample-file src="samples/basic/home.html"></div>
-            <div dx-sample-file src="samples/basic/contact.html"></div>
-            <div dx-sample-file src="samples/basic/about.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/index.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/home.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/contact.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/about.html"></div>
 
-            <div dx-sample-file src="samples/basic/style.css"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/style.css"></div>
         </div>
 
         <div dx-sample tags="angularjs; angular-routing" ng-show="tab == 'tran'">
-            <div dx-sample-file src="samples/basic/demo.js"></div>
-            <div dx-sample-file src="samples/basic/about.module.js"></div>
-            <div dx-sample-file src="samples/basic/contact.module.js"></div>
-            <div dx-sample-file src="samples/basic/home.module.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/demo.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/about.module.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/contact.module.js"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/home.module.js"></div>
 
-            <div dx-sample-file src="samples/basic/index.html"></div>
-            <div dx-sample-file src="samples/basic/about.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/index.html"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/about.html"></div>
 
-            <div dx-sample-file src="samples/basic/style.css"></div>
+            <div dx-sample-file src="angular-routing/samples/basic/style.css"></div>
         </div>
 
     </div>
