#19 Allow for registering states using an injectable function (experimental atm).

--- a/gh-pages/docs/partials/dotjem.routing.$state.html
+++ b/gh-pages/docs/partials/dotjem.routing.$state.html
@@ -128,6 +128,10 @@ The root state it self can&#39;t be selected. (The root state is implicitly defi
 </div><h5 id="methods_lookup_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>path</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="dotjem-routing-state-lookup-page"><p>Path expression to the state that can either be relative to the current state or from the root (/).</p>
 </div></td></tr></tbody></table></div>
 </li>
+<li><h3 id="methods_reinitialize">reinitialize()</h3>
+<div class="reinitialize"><div class="dotjem-routing-state-reinitialize-page"><p>Clears all states and associated routes and reinitializes the state service.</p>
+</div></div>
+</li>
 <li><h3 id="methods_reload">reload(state)</h3>
 <div class="reload"><div class="dotjem-routing-state-reload-page"><p>To force reload a state, use <code>reload</code>...</p>
 <ul>
