Added simple substrates example

--- a/templates/home.html
+++ b/templates/home.html
@@ -59,14 +59,23 @@
         </div>
 
         <div dx-sample tags="angularjs; angular-routing" ng-show="tab == 'sub'">
-            <div dx-sample-file src="samples/basic/demo.js"></div>
+            <div dx-sample-file src="samples/substates/demo.js"></div>
+            <div dx-sample-file src="samples/substates/about.module.js"></div>
+            <div dx-sample-file src="samples/substates/contact.module.js"></div>
+            <div dx-sample-file src="samples/substates/home.module.js"></div>
 
-            <div dx-sample-file src="samples/basic/index.html"></div>
-            <div dx-sample-file src="samples/basic/home.html"></div>
-            <div dx-sample-file src="samples/basic/contact.html"></div>
-            <div dx-sample-file src="samples/basic/about.html"></div>
+            <div dx-sample-file src="samples/substates/index.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-home.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-home-default.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-home-page1.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-home-page2.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-about.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-about-page1.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-about-page2.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-about-page3.html"></div>
+            <div dx-sample-file src="samples/substates/tpl-contact.html"></div>
 
-            <div dx-sample-file src="samples/basic/style.css"></div>
+            <div dx-sample-file src="samples/substates/style.css"></div>
         </div>
 
         <div dx-sample tags="angularjs; angular-routing" ng-show="tab == 'tran'">
